2002-12-08  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/counter_profile.cpp:
	* pp/counter_profile.h: use scoped_ptr

2002-12-08  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/counter_profile.h:
	* pp/counter_profile.cpp: relax samples_db_t sooner

2002-12-08  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opp_samples_files.cpp:
	* pp/opp_samples_files.h:
	* pp/samples_container.cpp:
	* pp/samples_container.h:
	* pp/samples_file.cpp:
	* pp/samples_file.h: rename class samples_file_t to counter_profile_t
	  rename class opp_samples_files to profile_t
	  rename class samples_container_t to profile_container_t
	  rename file using the new class name as filename w/o _t suffix

	* pp/format_output.cpp:
	* pp/format_output.h:
	* pp/op_merge.cpp:
	* pp/op_time.cpp:
	* pp/op_to_source.cpp:
	* pp/oprofpp.cpp:
	* pp/symbol_container_imp.cpp:
	* pp/symbol_container_imp.h:
	* pp/Makefile.am: reflect above class/file name change

2002-12-06  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_manage.c:
	* libdb/db_hash.h: db_init() new to properly initialize a samples_db_t

	* dae/opd_image.c:
	* daemon/opd_imge.c: earlier init a samples_db_t object using
	  db_init() rather a memset. This fix a potential bogosity cause we
	  closed a lot of time file descriptor 0

2002-12-06  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_image.c:
	* dae/opd_image.h:
	* dae/opd_kernel.c: use hash table entry 0 for kernel and module image

2002-12-04  John Levon  <levon@movementarian.org>

	* pp/opp_symbol.h:
	* pp/opp_symbol.cpp:
	* pp/format_output.h:
	* pp/format_output.cpp:
	* others from above: create format_output namespace, some
	  clean up
 
2002-12-04  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_image.c: revert last change, it break daemon...
	
2002-12-04  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_image.c: re-enable opd_check_image_mtime() it's not
	  perfect but better than nothing

	* libutil++/cverb.cpp: comment fix

2002-12-04  Will Cohen  <wcohen@redhat.com>
